# ProcessWatcher

./: .gitignore  CMakeLists.txt  README.md
CalculationEngine/: CMakeLists.txt
CalculationEngine/include/: LinuxProcessWatcher.h  OperationFactory.h  ProcessInfo.h  ProcessWatcher.h  WindowsProcessWatcher.h
CalculationEngine/src/: LinuxProcessWatcher.cpp  ProcessWatcher.cpp  WindowsProcessWatcher.cpp
ProcessWatchEngine/: CMakeLists.txt
ProcessWatchEngine/include/: LinuxProcessWatcher.h  OperationFactory.h  ProcessWatcher.h  WindowsProcessWatcher.h
ProcessWatchEngine/src/: ProcessWatcher.cpp
docs/: Doxyfile
src/: main.cpp
tests/unit_tests/: CMakeLists.txt  test_example.cpp
